kubernetes/clusters/1276-core/envoy-gateway-system/envoy-gateway/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: envoy-gateway-system
  annotations:
    metallb.universe.tf/ip-pool: system-pool
spec:
  gatewayClassName: eg
  addresses:
    - type: IPAddress
      value: 10.0.61.2
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
